unpackaged/main/default/objects/fferpcore__Company__c/fferpcore__Company__c.object-meta.xml
<CustomObject>
    <customHelpPage>fferpcore__CompanyHelp</customHelpPage>
    <description>Stores the company details.</description>
    <label>Company</label>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>