unpackaged/main/default/objects/fferpcore__Company__c/fields/fferpcore__Code__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Code__c</fullName>
    <description>Company code in the Avatax account to which documents are to be posted. If this field does not contain a value, documents are assigned to the default company.</description>
    <inlineHelpText>Company code in the Avatax account to which documents are to be posted. If this field does not contain a value, documents are assigned to the default company.</inlineHelpText>
    <label>Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>