unpackaged/main/default/objects/fferpcore__Company__c/fields/fferpcore__CorrelationId__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__CorrelationId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Correlation Id</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>