unpackaged/main/default/objects/fferpcore__Company__c/fields/fferpcore__Country__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Country__c</fullName>
    <label>Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>