unpackaged/main/default/objects/fferpcore__Company__c/fields/fferpcore__Fax__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Fax__c</fullName>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>