unpackaged/main/default/objects/fferpcore__Company__c/fields/fferpcore__Logo__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Logo__c</fullName>
    <description>Formula field that displays the company logo specified in the Logo URL.</description>
    <formula>IF(LEN(fferpcore__LogoURL__c)=0,"", IMAGE(fferpcore__LogoURL__c,"Company Logo"))</formula>
    <label>Logo</label>
    <type>Text</type>
</CustomField>