unpackaged/main/default/objects/fferpcore__Company__c/fields/fferpcore__LogoURL__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__LogoURL__c</fullName>
    <description>URL of the company's logo.</description>
    <label>Logo URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>