unpackaged/main/default/objects/fferpcore__Company__c/fields/fferpcore__State__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__State__c</fullName>
    <label>State/Province</label>
    <length>20</length>
    <type>Text</type>
</CustomField>