unpackaged/main/default/objects/fferpcore__Company__c/fields/fferpcore__TaxInformation__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__TaxInformation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the tax information for this company.</description>
    <inlineHelpText>Lookup to the tax information for this company.</inlineHelpText>
    <label>Tax Information</label>
    <referenceTo>fferpcore__CompanyTaxInformation__c</referenceTo>
    <relationshipLabel>Companies</relationshipLabel>
    <relationshipName>Companies</relationshipName>
    <type>Lookup</type>
</CustomField>