unpackaged/main/default/objects/fferpcore__Company__c/fields/fferpcore__ValidatedCity__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ValidatedCity__c</fullName>
    <description>Address city validated by the external tax calculation service.</description>
    <label>Validated City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>