unpackaged/main/default/objects/fferpcore__Company__c/fields/fferpcore__ValidatedCountry__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ValidatedCountry__c</fullName>
    <description>Address country validated by the external tax calculation service.</description>
    <label>Validated Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>