unpackaged/main/default/objects/fferpcore__Company__c/fields/fferpcore__ValidatedState__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ValidatedState__c</fullName>
    <description>Address state or province validated by the external tax calculation service.</description>
    <label>Validated State/Province</label>
    <length>20</length>
    <type>Text</type>
</CustomField>