unpackaged/main/default/objects/fferpcore__Company__c/fields/fferpcore__Website__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Website__c</fullName>
    <description>URL of the company's website.</description>
    <label>Website</label>
    <type>Url</type>
</CustomField>