unpackaged/main/default/objects/fferpcore__Company__c/fields/fferpcore__Zip__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Zip__c</fullName>
    <label>Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>